Enable JVMCI to improve Python script execution performance (#50)
* Add compiler download task

Signed-off-by: Shuang Li <shualee@amazon.com>

* Apply spotless

Signed-off-by: Shuang Li <shualee@amazon.com>

* Add compiler-related jvmArgs in build.gradle

Signed-off-by: Shuang Li <shualee@amazon.com>

* minor fix

Signed-off-by: Shuang Li <shualee@amazon.com>

* Adjust Java versions of CI from 21/23 to 23/25 due to Graal compiler compatibility

Signed-off-by: Shuang Li <shualee@amazon.com>

---------

Signed-off-by: Shuang Li <shualee@amazon.com>